unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/pse__Miscellaneous_Adjustment__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__MiscellaneousAdjustmentHelp</customHelpPage>
    <description>Use miscellaneous adjustments to correct errors in data entry or adjust transactions. When you create a miscellaneous adjustment, FinancialForce PSA creates a number of related transactions of a specific category (for example, Pass-Through Ready-to-Bill Revenue) and amount. A miscellaneous adjustment is applied to a project and its related roll-ups to region, practice, and group. Miscellaneous adjustments roll up to actuals fields depending on settings you control in the Actuals configuration group.</description>
    <label>Miscellaneous Adjustment</label>
    <nameField>
        <label>Miscellaneous Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Miscellaneous Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>