unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/pse__Admin_Global_Edit__c.field-meta.xml
<CustomField>
    <fullName>pse__Admin_Global_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, allows Admin to make 'global' changes to the Misc Adj., including edits to the Misc Adj.'s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to 'Scheduled'.</description>
    <inlineHelpText>If checked, allows Admin to make 'global' changes to the Misc Adj., including edits to the Misc Adj.'s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to 'Scheduled'.</inlineHelpText>
    <label>Admin Global Edit</label>
    <type>Checkbox</type>
</CustomField>