unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/pse__Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The monetary amount of the Miscellaneous Adjustment. Defaults to and must always be same currency as Project.</description>
    <inlineHelpText>The monetary amount of the Miscellaneous Adjustment. Defaults to and must always be same currency as Project.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>