unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/pse__Bill_Transaction__c.field-meta.xml
<CustomField>
    <fullName>pse__Bill_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Transaction</label>
    <referenceTo>pse__Transaction__c</referenceTo>
    <relationshipLabel>Miscellaneous Adjustment (Bill Transaction)</relationshipLabel>
    <relationshipName>Bill_Tx_Miscellaneous_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>