unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/pse__Billing_Event__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Event__c</fullName>
    <description>Formula hyperlink to the Billing Event (parent record to the Bill Event Item) if any.</description>
    <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),'',HYPERLINK('/'&amp;pse__Billing_Event_Item__r.pse__Billing_Event__c, IF(OR(ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name)),pse__Billing_Event_Item__r.pse__Billing_Event__c,(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name))))</formula>
    <label>Billing Event</label>
    <type>Text</type>
</CustomField>