unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/pse__Description__c.field-meta.xml
<CustomField>
    <fullName>pse__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>