unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/pse__Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>pse__Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Miscellaneous Adjustments</relationshipLabel>
    <relationshipName>Miscellaneous_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>