unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/validationRules/pse__Misc_Adj_Billing_Requires_Inclusion.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Misc_Adj_Billing_Requires_Inclusion</fullName>
    <active>true</active>
    <description>For a Miscellaneous Adjustment to be marked as Billed, it must also be marked as Included In Financials and Approved.</description>
    <errorConditionFormula>AND(pse__Billed__c,OR(NOT(pse__Include_In_Financials__c),NOT(pse__Approved__c)))</errorConditionFormula>
    <errorDisplayField>pse__Billed__c</errorDisplayField>
    <errorMessage>For a Miscellaneous Adjustment to be marked as Billed, it must also be marked as Included In Financials and Approved.</errorMessage>
</ValidationRule>