unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/validationRules/pse__Misc_Adj_Invoicing_Requires_Billing.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Misc_Adj_Invoicing_Requires_Billing</fullName>
    <active>true</active>
    <description>For a Miscellaneous Adjustment to be marked as Invoiced, it must also be marked as Billed.</description>
    <errorConditionFormula>AND(pse__Invoiced__c,NOT(pse__Billed__c))</errorConditionFormula>
    <errorDisplayField>pse__Invoiced__c</errorDisplayField>
    <errorMessage>For a Miscellaneous Adjustment to be marked as Invoiced, it must also be marked as Billed.</errorMessage>
</ValidationRule>