unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/validationRules/pse__Vendor_Invoice_Constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Vendor_Invoice_Constant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(pse__Vendor_Invoice_Item__c),LEN(PRIORVALUE(pse__Vendor_Invoice_Item__c))&gt;0)</errorConditionFormula>
    <errorDisplayField>pse__Vendor_Invoice_Item__c</errorDisplayField>
    <errorMessage>Vendor Invoice Item cannot be changed</errorMessage>
</ValidationRule>