unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Effective_Date__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Transaction_Category__c</columns>
    <columns>pse__Amount__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Transaction__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>